--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -7,16 +7,16 @@
 
     <!-- Search events -->
     <div class="row">
-        <form action="{{ url_for('events.search_events') }}" method="post" class="col s10 offset-s1 card-panel search-card hight-z-index">
+        <form action="{{ url_for('events.search_events') }}" method="post" class="col s12 m10 offset-m1 l6 offset-l3 card-panel search-card hight-z-index">
             <div class="row valign-wrapper no-margin-bot">
-                <div class="col s12 m6 input-field hight-z-index">
+                <div class="col s4 input-field hight-z-index">
                     <span class="material-icons prefix">search</span>
                     <input type="text" name="query_search_events" id="query_search_events"
                         class="validate" minlength="2" required>
                     <label for="query_search_events">Search Events</label>
                 </div>
                 <!-- Submit / Reset -->
-                <div class="col s12 m4 center-align">
+                <div class="col s6 center-align">
                     <button class="btn waves-effect waves-light blue-bg white-txt submit-btn" type="submit">Search</button>
                     <a href="{{ url_for('events.browse_events') }}" 
                         class="btn waves-effect waves-light red-bg white-txt cancel-btn">Reset</a>
@@ -28,7 +28,7 @@
     <!-- Search by category -->
     <div class="row">
         <div class="row">
-            <form action="{{ url_for('events.select_events') }}" method="post" class="col s6 offset-s3 card-panel search-card hight-z-index">
+            <form action="{{ url_for('events.select_events') }}" method="post" class="col s12 m6 offset-m3 l4 offset-l4 card-panel search-card hight-z-index">
                 <div class="row valign-wrapper no-margin-bot">
                     <div class="input-field col s4 input-field no-margin-top hight-z-index">
                         <select id="event_category" name="event_category" class="validate" required>
@@ -118,6 +118,7 @@
                                         </p>
                                     </div>
                                 </div>
+                                <!-- Access to event -->
                                 <div class="row">
                                     <div class="col s12 center-align">
                                         {% if session["user"] %}
@@ -138,7 +139,6 @@
                                     </div>
                                 </div>
                             </form>
-                            
                         </a>
                     {% endfor %}
                 </div>
@@ -147,7 +147,7 @@
     {% else %}
         <div class="row">
             <div class="col s12 m4 offset-m4">
-                <div class="card-panel" id="no-result">
+                <div class="card-panel no-result">
                     <h3 class="black-txt center-align orange-bg">There is no result for this search !</h3>
                 </div>
             </div>
@@ -175,8 +175,8 @@
 
     <!-- Overlay -->
     <div id="event-overlay" class="overlay"></div>
+    
 {% endblock %}
-
 {% block scripts %}
     <script src="{{ url_for('static', filename='js/scripts/events.js') }}"></script>
 {% endblock %}
