--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -61,85 +61,87 @@
         <div class="row">
             <div class="col s12 carousel-wrapper">
                 <div class="carousel">
-                    {% for event in events_list %}       
-                        <a class="carousel-item event-slide black-txt">
-                            <form action="{{ url_for('events.see_event') }}" method="POST"
-                                class="card-panel orange-bg carousel-from">
-                                <!-- Hidden input to get the event id -->
-                                <div class="hide">
-                                    <input id="event_id" name="event_id" value="{{ event._id }}" type="text">
-                                </div>
-                                <!-- Category -->
-                                <div class="row events-card-sections">
-                                    <div class="col s12">
-                                        <p class="events-card-titles">What ?</p>
-                                        <p class="events-card-descriptions">{{ event.event_category }}</p>
+                    {% for event in events_list %}
+                        {% if event.event_category != "" %}      
+                            <a class="carousel-item event-slide black-txt">
+                                <form action="{{ url_for('events.see_event') }}" method="POST"
+                                    class="card-panel orange-bg carousel-from">
+                                    <!-- Hidden input to get the event id -->
+                                    <div class="hide">
+                                        <input id="event_id" name="event_id" value="{{ event._id }}" type="text">
                                     </div>
-                                </div>
-                                <!-- Location -->
-                                <div class="row events-card-sections">
-                                    <div class="col s12">
-                                        <p class="events-card-titles">Where ?</p>
-                                        <p class="events-card-descriptions">{{ event.event_location }}</p>
+                                    <!-- Category -->
+                                    <div class="row events-card-sections">
+                                        <div class="col s12">
+                                            <p class="events-card-titles">What ?</p>
+                                            <p class="events-card-descriptions">{{ event.event_category }}</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <!-- Date -->
-                                <div class="row events-card-sections">
-                                    <div class="col s12">
-                                        <p class="events-card-titles">When ?</p>
-                                        <p class="events-card-descriptions">{{ event.event_date }}</p>
+                                    <!-- Location -->
+                                    <div class="row events-card-sections">
+                                        <div class="col s12">
+                                            <p class="events-card-titles">Where ?</p>
+                                            <p class="events-card-descriptions">{{ event.event_location }}</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <!-- Time -->
-                                <div class="row events-card-sections">
-                                    <div class="col s12">
-                                        <p class="events-card-titles">What time ?</p>
-                                        <p class="events-card-descriptions">{{ event.event_time }}</p>
+                                    <!-- Date -->
+                                    <div class="row events-card-sections">
+                                        <div class="col s12">
+                                            <p class="events-card-titles">When ?</p>
+                                            <p class="events-card-descriptions">{{ event.event_date }}</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <!-- Age Range -->
-                                <div class="row events-card-sections">
-                                    <div class="col s12">
-                                        <p class="events-card-titles">Age range in years :</p>
-                                        <p class="events-card-descriptions">{{ event.event_age_range }}</p>
+                                    <!-- Time -->
+                                    <div class="row events-card-sections">
+                                        <div class="col s12">
+                                            <p class="events-card-titles">What time ?</p>
+                                            <p class="events-card-descriptions">{{ event.event_time }}</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <!-- Description -->
-                                <div class="row events-card-sections">
-                                    <div class="col s12">
-                                        <p class="events-card-titles">Description :</p>
-                                        <p class="events-card-descriptions">{{ event.event_description }}</p>
+                                    <!-- Age Range -->
+                                    <div class="row events-card-sections">
+                                        <div class="col s12">
+                                            <p class="events-card-titles">Age range in years :</p>
+                                            <p class="events-card-descriptions">{{ event.event_age_range }}</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <!-- Likes -->
-                                <div class="row events-card-sections">
-                                    <div class="col s12">
-                                        <p class="events-card-descriptions padd-top padd-bot">{{ event.event_likes }}
-                                        </p>
+                                    <!-- Description -->
+                                    <div class="row events-card-sections">
+                                        <div class="col s12">
+                                            <p class="events-card-titles">Description :</p>
+                                            <p class="events-card-descriptions">{{ event.event_description }}</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <!-- Access to event -->
-                                <div class="row">
-                                    <div class="col s12 center-align">
-                                        {% if session["user"] %}
-                                            <button type="submit"
-                                                class="btn submit-btn blue-bg white-txt center-align centered">
-                                                <span class="valign-wrapper">
-                                                    See <span class="material-icons">login</span>
-                                                </span>
-                                            </button>
-                                        {% else %}
-                                            <button type="button" id="try-see-event"
-                                                class="btn submit-btn blue-bg white-txt">
-                                                <span class="valign-wrapper">
-                                                    See <span class="material-icons">login</span>
-                                                </span>
-                                            </button>
-                                        {% endif %}
+                                    <!-- Likes -->
+                                    <div class="row events-card-sections">
+                                        <div class="col s12">
+                                            <p class="events-card-descriptions padd-top padd-bot">{{ event.event_likes }}
+                                            </p>
+                                        </div>
                                     </div>
-                                </div>
-                            </form>
-                        </a>
+                                    <!-- Access to event -->
+                                    <div class="row">
+                                        <div class="col s12 center-align">
+                                            {% if session["user"] %}
+                                                <button type="submit"
+                                                    class="btn submit-btn blue-bg white-txt center-align centered">
+                                                    <span class="valign-wrapper">
+                                                        See <span class="material-icons">login</span>
+                                                    </span>
+                                                </button>
+                                            {% else %}
+                                                <button type="button" id="try-see-event"
+                                                    class="btn submit-btn blue-bg white-txt">
+                                                    <span class="valign-wrapper">
+                                                        See <span class="material-icons">login</span>
+                                                    </span>
+                                                </button>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </form>
+                            </a>
+                        {% endif %}
                     {% endfor %}
                 </div>
             </div>
