--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -148,7 +148,7 @@
                     <a href="{{ url_for('users.signup') }}" aria-label="Link to the Sign Up page."
                         class="btn submit-btn blue-bg">Sign Up</a> <br>
                     <a href="{{ url_for('index.home') }}" aria-label="Link to the Home page."
-                        class="btn back-btn blue-txt yellow-bg">Back to browsing</a>
+                        class="btn back-to-home-btn black-txt green-bg">Back to browsing</a>
                 </div>
             </div>
 
