--- a/app/templates/create_event.html
+++ b/app/templates/create_event.html
@@ -12,7 +12,7 @@
                 <input id="event_created_by" name="event_created_by" value="{{ user._id }}" type="text">
             </div>
             <!-- category -->
-            <div class="row">
+            <div class="row padd-top">
                 <div class="input-field col s12">
                     <select id="event_category" name="event_category" class="validate" required>
                         <option value="" disabled selected>Choose a category</option>
