--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -7,18 +7,20 @@
 
     <!-- Search events -->
     <div class="row">
-        <form action="{{ url_for('events.search_events') }}" method="post" class="col s12 m10 offset-m1 l6 offset-l3 card-panel search-card hight-z-index">
+        <form action="{{ url_for('events.search_events') }}" method="POST"
+            class="col s12 m10 offset-m1 l6 offset-l3 card-panel search-card hight-z-index">
             <div class="row valign-wrapper no-margin-bot">
                 <div class="col s4 input-field hight-z-index">
                     <span class="material-icons prefix">search</span>
-                    <input type="text" name="query_search_events" id="query_search_events"
-                        class="validate" minlength="2" required>
+                    <input type="text" name="query_search_events" id="query_search_events" class="validate"
+                        minlength="2" required>
                     <label for="query_search_events">Search Events</label>
                 </div>
                 <!-- Submit / Reset -->
                 <div class="col s6 center-align">
-                    <button class="btn waves-effect waves-light blue-bg white-txt submit-btn" type="submit">Search</button>
-                    <a href="{{ url_for('events.browse_events') }}" 
+                    <button class="btn waves-effect waves-light blue-bg white-txt submit-btn"
+                        type="submit">Search</button>
+                    <a href="{{ url_for('events.browse_events') }}"
                         class="btn waves-effect waves-light red-bg white-txt cancel-btn">Reset</a>
                 </div>
             </div>
@@ -28,7 +30,8 @@
     <!-- Search by category -->
     <div class="row">
         <div class="row">
-            <form action="{{ url_for('events.select_events') }}" method="post" class="col s12 m6 offset-m3 l4 offset-l4 card-panel search-card hight-z-index">
+            <form action="{{ url_for('events.select_events') }}" method="post"
+                class="col s12 m6 offset-m3 l4 offset-l4 card-panel search-card hight-z-index">
                 <div class="row valign-wrapper no-margin-bot">
                     <div class="input-field col s4 input-field no-margin-top hight-z-index">
                         <select id="event_category" name="event_category" class="validate" required>
@@ -47,13 +50,14 @@
                     </div>
                     <!-- Submit / Reset -->
                     <div class="col s8 center-align">
-                        <button class="btn waves-effect waves-light blue-bg white-txt submit-btn small-btn" type="submit">Apply</button>
-                        <a href="{{ url_for('events.browse_events') }}" 
+                        <button class="btn waves-effect waves-light blue-bg white-txt submit-btn small-btn"
+                            type="submit">Apply</button>
+                        <a href="{{ url_for('events.browse_events') }}"
                             class="btn waves-effect waves-light red-bg white-txt cancel-btn small-btn">Reset</a>
                     </div>
                 </div>
             </form>
-        </div>
+            </div>
     </div>
 
     {% if events_list|length > 0 %}
